config/04-kubernetes/40-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: api
 namespace: tekton-hub
 annotations:
   kubernetes.io/ingress.class: "public-iks-k8s-nginx"
   nginx.ingress.kubernetes.io/configuration-snippet: |
     rewrite ^(/[a-z1-9\-]*)$ $1/ redirect;
   nginx.ingress.kubernetes.io/use-regex: "true"
   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
 tls:
 - hosts:
   - tekton-cnd-dff43bc8701fcd5837d6de963718ad39-0000.eu-gb.containers.appdomain.cloud
   secretName: tekton-cnd-dff43bc8701fcd5837d6de963718ad39-0000
 rules:
 - host: tekton-cnd-dff43bc8701fcd5837d6de963718ad39-0000.eu-gb.containers.appdomain.cloud
   http:
     paths:
     - path: /api(/|$)(.*)
       pathType: Prefix
       backend:
         service:
           name: api
           port:
             number: 8000
