config/04-kubernetes/41-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: tekton-hub
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/[a-z1-9\-]*)$ $1/ redirect;
      proxy_set_header Accept-Encoding "";
      sub_filter '<head>' '<head> <base href="/ui/">';
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - tekton-cnd-dff43bc8701fcd5837d6de963718ad39-0000.eu-gb.containers.appdomain.cloud
      secretName: tekton-cnd-dff43bc8701fcd5837d6de963718ad39-0000
  rules:
    - host: tekton-cnd-dff43bc8701fcd5837d6de963718ad39-0000.eu-gb.containers.appdomain.cloud
      http:
        paths:
          - path: /ui(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8080
